--- a/Mid assignment/ShoppingCartMVC/Ch24ShoppingCartMVC/Ch24ShoppingCartMVC.csproj
+++ b/Mid assignment/ShoppingCartMVC/Ch24ShoppingCartMVC/Ch24ShoppingCartMVC.csproj
@@ -20,6 +20,8 @@
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
+    <Use64BitIISExpress />
+    <UseGlobalApplicationHostFile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -135,15 +137,30 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\CartModel.cs" />
-    <Compile Include="Models\DataAccess\Halloween.Context.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Halloween.Context.tt</DependentUpon>
+    <Compile Include="Models\DataAccess\Category.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\DataAccess\Halloween.cs">
+    <Compile Include="Models\DataAccess\Customer.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\DataAccess\Invoice.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\DataAccess\InvoiceData.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\DataAccess\LineItem.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\DataAccess\Model1.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>Halloween.tt</DependentUpon>
+      <DependentUpon>Model1.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\DataAccess\Model1.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\DataAccess\Halloween.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -151,7 +168,10 @@
       <DependentUpon>Halloween.edmx</DependentUpon>
     </Compile>
     <Compile Include="Models\DataAccess\Product.cs">
-      <DependentUpon>Halloween.tt</DependentUpon>
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\DataAccess\State.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\OrderModel.cs" />
     <Compile Include="Models\ViewModels\CartViewModel.cs" />
@@ -253,20 +273,20 @@
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>Halloween.Designer.cs</LastGenOutput>
     </EntityDeploy>
-    <Content Include="Models\DataAccess\Halloween.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>Halloween.edmx</DependentUpon>
-      <LastGenOutput>Halloween.Context.cs</LastGenOutput>
-    </Content>
     <Content Include="Models\DataAccess\Halloween.edmx.diagram">
       <DependentUpon>Halloween.edmx</DependentUpon>
     </Content>
-    <Content Include="Models\DataAccess\Halloween.tt">
+    <None Include="Scripts\jquery-1.8.2.intellisense.js" />
+    <Content Include="Models\DataAccess\Model1.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>Halloween.edmx</DependentUpon>
-      <LastGenOutput>Halloween.cs</LastGenOutput>
+      <LastGenOutput>Model1.Context.cs</LastGenOutput>
     </Content>
-    <None Include="Scripts\jquery-1.8.2.intellisense.js" />
+    <Content Include="Models\DataAccess\Model1.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>Halloween.edmx</DependentUpon>
+      <LastGenOutput>Model1.cs</LastGenOutput>
+    </Content>
     <Content Include="Scripts\halloween.js" />
     <Content Include="Scripts\jquery-1.8.2.js" />
     <Content Include="Scripts\jquery-1.8.2.min.js" />
