--- a/Mid assignment/ShoppingCartMVC/Ch24ShoppingCartMVC/Web.config
+++ b/Mid assignment/ShoppingCartMVC/Ch24ShoppingCartMVC/Web.config
@@ -9,8 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-Ch24ShoppingCartMVC-20130619163656;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-Ch24ShoppingCartMVC-20130619163656.mdf" />
-    <add name="HalloweenEntities" connectionString="metadata=res://*/Models.DataAccess.Halloween.csdl|res://*/Models.DataAccess.Halloween.ssdl|res://*/Models.DataAccess.Halloween.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\Halloween.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="HalloweenEntities" connectionString="metadata=res://*/Models.DataAccess.Halloween.csdl|res://*/Models.DataAccess.Halloween.ssdl|res://*/Models.DataAccess.Halloween.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\Halloween.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
